--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 
-body{
-    background-color: green;
-}
+
 
 /* top left e meu padrao de distribuicao na tela */
 /* coordenada cartesiana: localizacao de um ponto no plano */
@@ -10,17 +8,47 @@ body{
 /* X horizontal left */
 /* Y vertical top */
 
-#heli-player{
+#score-area{
+    background-color: rgb(148, 148, 124);
+}
+
+#game-area{
+    background-color: rgb(12, 46, 12);
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 150px);
+}
+
+#life-score{
+    width: 50px;
+    height: 50px;
+}
+
+
+#lives{
+    width: 50px;
+    height: 50px;
+}
+
+#player{
     width: 50px;
     height: 50px;
     background-color: antiquewhite;
     position:absolute;
     top: 0;
     left: 0;
-
 }
 
-#heli-computer{
+#bullet{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: red;
+    display: none;
+}
+
+#computer{
     width: 50px;
     height: 50px;
     background-color: brown;
@@ -32,14 +60,19 @@ body{
 #truck{
     width: 50px;
     height: 50px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: azure;
 }
 
-#prize{
-    width: 50px;
-    height: 50px;
-}
 
 #person{
     width: 50px;
     height: 50px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: blueviolet;
+
 }
