person and truck obj

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,16 @@
 /* X horizontal left */
 /* Y vertical top */
 
+body{
+    font-size: 1.5rem;
+    margin: 0;
+    padding: 0;
+}
+
 #score-area{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 30px;
     background-color: rgb(148, 148, 124);
 }
 
@@ -16,24 +25,25 @@
     background-color: rgb(12, 46, 12);
     position: relative;
     width: 100%;
-    height: calc(100vh - 150px);
+    height: calc(100vh - 50px);
 }
 
 #life-score{
-    width: 50px;
-    height: 50px;
+    /* width: 50px; */
+    /* height: 50px; */
 }
 
 
 #lives{
-    width: 50px;
-    height: 50px;
+    /* width: 50px; */
+    /* height: 50px; */
 }
 
 #player{
-    width: 50px;
-    height: 50px;
-    background-color: antiquewhite;
+    width: 180px;
+    aspect-ratio: 1;
+    background-image: url(./assets/heli1.webp);
+    background-size: cover;
     position:absolute;
     top: 0;
     left: 0;
@@ -49,30 +59,33 @@
 }
 
 #computer{
-    width: 50px;
-    height: 50px;
-    background-color: brown;
+    width: 280px;
+    aspect-ratio: 2.7;
+    background-image: url(./assets/heli2.png);
+    background-size: cover;
     position: absolute;
     top: 0;
     right: 0;
 }
 
 #truck{
-    width: 50px;
-    height: 50px;
+    width: 200px;
+    height: 200px;
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: azure;
+    background-image: url(./assets/militartruck.webp);
+    background-size: cover;
 }
 
 
 #person{
-    width: 50px;
-    height: 50px;
+    width: 150px;
+    height: 150px;
     position: absolute;
     bottom: 0;
     right: 0;
-    background-color: blueviolet;
+    background-image: url(./assets/militar.jpeg);
+    background-size: cover;
 
 }
