--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 /* top left e meu padrao de distribuicao na tela */
 /* coordenada cartesiana: localizacao de um ponto no plano */
 /* vai sempre aparecer na tela do computador as coordenadas (0,0) por convencao */
@@ -6,7 +5,7 @@
 /* X horizontal left */
 /* Y vertical top */
 
-body{
+body {
     font-family: "Play", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -15,7 +14,7 @@ body{
     padding: 0;
 }
 
-#score-area{
+#score-area {
     display: flex;
     justify-content: space-between;
     padding: 10px 30px;
@@ -23,7 +22,7 @@ body{
 
 }
 
-#game-area{
+#game-area {
     /* background-color: rgb(12, 46, 12); */
     background-image: url(./assets/backgrounggame.webp);
     background-size: cover;
@@ -32,28 +31,28 @@ body{
     height: calc(100vh - 50px);
 }
 
-#life-score{
+#life-score {
     /* width: 50px; */
     /* height: 50px; */
 }
 
 
-#lives{
+#lives {
     /* width: 50px; */
     /* height: 50px; */
 }
 
-#player{
+#player {
     width: 180px;
-    aspect-ratio: 1;
-    background-image: url(./assets/heli1.webp);
+    aspect-ratio: 1.6;
+    background-image: url(./assets/heli1.png);
     background-size: cover;
-    position:absolute;
+    position: absolute;
     top: 0;
     left: 0;
 }
 
-#bullet{
+#bullet {
     width: 30px;
     height: 30px;
     position: absolute;
@@ -63,7 +62,7 @@ body{
     display: none;
 }
 
-#computer{
+#computer {
     width: 280px;
     aspect-ratio: 2.7;
     background-image: url(./assets/heli2.png);
@@ -73,9 +72,9 @@ body{
     right: 0;
 }
 
-#truck{
+#truck {
     width: 200px;
-    height: 200px;
+    aspect-ratio: 1.4;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -84,7 +83,7 @@ body{
 }
 
 
-#character{
+#character {
     width: 70px;
     /* 218/461 dividir o tamanho da imagem */
     aspect-ratio: 0.47;
@@ -94,4 +93,52 @@ body{
     background-image: url(./assets/character-cowboy.png);
     background-size: cover;
     transform: rotateY(180deg);
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close-content {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-content:hover,
+.close-content:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
