--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     font-weight: 400;
     font-style: normal;
     font-size: 1.5rem;
+    color: #FAA80A;
     margin: 0;
     padding: 0;
 }
@@ -18,7 +19,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 10px 30px;
-    background-color: rgb(148, 148, 124);
+    background-color: #4a7bbe;
 
 }
 
@@ -121,16 +122,18 @@ body {
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
+    text-align: center;
     /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    padding: 24px;
+    border: 1px solid #FAA80A;
+    border-radius: 16px;
+    width: 50%;
     /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close-content {
-    color: #aaa;
+    color: #3E69A5;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -141,4 +144,13 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+#play-again-btn{
+    padding: 8px 16px;
+    background-color: #3E69A5;
+    color: #FAA80A;
+    font-weight: bolder;
+    border: none;
+    border-radius: 4px;
 }
